# doc-clone

./: Cargo.toml  README.md
examples/: example.rs  example.txt  expected.c  input-warn.c  input.c
src/: constants.rs  helpers.rs  main.rs  source.rs  target.rs  utils.rs
